--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
     "next": "15.3.5",
